i dont even know

--- a/main.tex
+++ b/main.tex
@@ -395,7 +395,7 @@ Figure~\ref{fig:1eNp:effpur:RUN1} shows the efficiency of the \npsel selections 
 
 \subsection{1$e$0$p$ Channel \textcolor{green}{Sophie, Ivan}}
 \label{sec:nueselection:1e0p}
-The 1e0p channel is an important sideband sample that can be used to constrain uncertainties associated with the 1eNp selection.  In particular it can be used to constrain uncertainties associated with low energy protons, such as the modeling of the proton multiplicity and kinematics produced by neutrino interactions and their reconstruction efficiencies.  This sample is very sensitive to the neutrino interaction modeling, which makes it a useful way to constrain these systematics with data.  In MCC8 there were twice as many events in this channel as in MCC9, and half of the low energy neutrinos (below 0.8 GeV), were in this channel.
+The 1e0p channel is an important topology that can be used to constrain uncertainties associated with the 1eNp selection.  In particular, it can be used to constrain uncertainties associated with low energy protons, such as the modeling of the proton multiplicity and kinematics produced by neutrino interactions, and their reconstruction efficiencies.  This selection is very sensitive to the neutrino interaction modeling, which makes it a useful way to constrain these systematics with data.  In MCC8, there were twice as many events in this channel as in MCC9, and half of the  neutrinos below 0.8 GeV were in this channel.
 
 This sample also contains additional low energy electron neutrinos which can be used as signal in the eLEE search.  This signal is also complementary because it is part of the signal that MiniBooNE measured; their signal was 1eXp0pi, or the sum of the 1eNp0pi and 1e0p0pi samples, so including this sample makes it possible to fully reproduce the event topologies observed by MinibooNE.    
 
