--- a/main.tex
+++ b/main.tex
@@ -393,57 +393,85 @@ Figure~\ref{fig:1eNp:effpur:RUN1} shows the efficiency of the \npsel selections 
 \end{center}
 \end{figure}
 
-\subsection{1$e$0$p$ Channel \textcolor{green}{Sophie, Ivan}}
+\subsection{1$e$0$p$ Channel \textcolor{green}{Sophie, Ivan ... PR Elena}}
 \label{sec:nueselection:1e0p}
-The 1e0p channel is an important topology that can be used to constrain uncertainties associated with the 1eNp selection.  In particular, it can be used to constrain uncertainties associated with low energy protons, such as the modeling of the proton multiplicity and kinematics produced by neutrino interactions, and their reconstruction efficiencies.  This selection is very sensitive to the neutrino interaction modeling, which makes it a useful way to constrain these systematics with data.  In MCC8, there were twice as many events in this channel as in MCC9, and half of the  neutrinos below 0.8 GeV were in this channel.
 
-This sample also contains additional low energy electron neutrinos which can be used as signal in the eLEE search.  This signal is also complementary because it is part of the signal that MiniBooNE measured; their signal was 1eXp0pi, or the sum of the 1eNp0pi and 1e0p0pi samples, so including this sample makes it possible to fully reproduce the event topologies observed by MinibooNE.    
+The \zpsel topology complements the \npsel topology as part of the signal that MiniBooNE measured: the MiniBooNE signal is defined as 1eXp0$\pi$, i.e. the sum of the 1eNp0$\pi$ and 1e0p0$\pi$ channels. Thus,  including the \zpsel topology makes it possible for MicroBooNE to fully reproduce the types of events observed by MiniBooNE.    
+
+The \zpsel channel can also be used to constrain uncertainties associated with the \npsel selection.  In particular, it can be used to constrain uncertainties associated with low energy protons, such as the modeling of the proton multiplicity and kinematics produced by neutrino interactions, and their reconstruction efficiencies.  This selection is very sensitive to the neutrino interaction modeling, which makes it a useful way to constrain these systematics with data.  In MCC8, there were twice as many events in this channel as in MCC9, including half of the  electron neutrinos below 0.8 GeV.
+
 
 \subsubsection{Tools Unique to 0p Selection}
 
-The 1e0p sample is able to constrain systematic uncertainties in the Np sample because it is fully orthogonal with the Np selection.  This will allow migrations in a simulataneous fit, as described in section XX.  This also makes it possible to recover neutrino events that fail the Np selection cuts.  One of the tools used to do this is shower-track merging.  In some events the shower trunk is mis-reconstructed as a track.  These events are typically discarded immediately in the Np selection, either by a cut on the angle between the track and the shower, or the track PID.  The track-shower merging is a tool designed to recover these events.
+%The \npsel sample is able to constrain systematic uncertainties in the \npsel sample because it is fully orthogonal with the \npsel selection by construction.  This will allow migrations in a simultaneous fit, as described in section \textcolor{blue}{XX}.  
 
-In the track-shower merging, the tracks in a neutrino slice are matched with the most energetic shower.  The angle between the track and shower and the distance between both the start and end point of the track and the start point of the shower are evaluated.  The track that best aligns in direction with the shower is selected to merge with the shower.  Then the distance from the start point of the shower to both the start and end point of this track is evaluated.  The smaller distance is stored as merge\_bestdist, which is a measure of the closest distance between the track and the shower. If an event has one contained track and one contained shower, but fails the Np selection cuts at either the shower-track angle or track PID stage, and the merged track is within 2cm of the start point of the shower then the event is recovered in the 1e0p selection.  As of December 20th, this corresponded to a 20\% increase in selected 1e0p events.
+Since the \zpsel selection is fully orthogonal to the \npsel selection, we can use \zpsel sample to constrain systematic uncertainties in the \npsel sample, allowing for migrations in a simultaneous fit, \emph{as will be described in section \ref{sec:1e0pconstraint}}.
 
-This tool could be expanded in the future to re-calculate for de/dx along the new track/shower length, or to re-fit the entire event as a shower.
+The \zpsel selection also allows to recover $\nu_e$ signal events not accounted in the \npsel selection, especially thanks to the track-shower merging tool.  \textcolor{blue}{ \st{These events are typically discarded immediately in the 1eNp selection, either by a cut on the angle between the track and the shower, or the track PID} In some sense, rightfully so: if the problem is shower mis-Reco, then the \npsel shouldnt catch them -- Elena}.  
+The track-shower merging tool is a processing step specific to \npsel workflow which is designed to recover events where the EM activity is split in a shower and one (or more)  tracks; this occurs frequently when the shower trunk is mis-reconstructed as a track. For this recovery, we consider the most energetic shower and all the non-proton-like tracks in the slice.  In case of multiple tracks, we select the track that best aligns with the shower by calculating the track with the smallest angle off of the shower direction. In case of only one reconstructed track, the track is selected by default. We then calculate the distance between the start point of the shower and either ends of the selected track:  the smallest of these two values is stored as the  \emph{merge\_bestdist} variable.  We recover an event that fails the \npsel selection cuts at either the shower-track angle or track PID stage if the event has one contained track and one contained shower with \emph{merge\_bestdist} is less than 2 cm. As of December 20th, this corresponded to a 20\% increase in selected \zpsel events.
+
 
 \subsubsection{Pre-selection}
-A basic set of pre-selection cuts are defined for the 1e0p selection.  These require that the selection variables are defined, and all potential 1eNp events, including those included with track-shower merging are included.  The pre-selection also includes a cut on the shower energy to remove decay electrons from cosmic muons.
+Similarly to the \npsel workflow, a minimum set of pre-selection requirements are defined for the \zpsel selection.  The preselection requires that the all selection variables are defined, and all potential 1eNp events, including those included with track-shower merging are included \textcolor{blue}{I don't think I understand this point on the 1eNp events... if we write it like this, the channels don't look orthogonal: I thought this preselection was after the splitting between Np and 0p pre-selections}.  The pre-selection also includes a cut on the shower energy to remove decay electrons from cosmic muons.
+The 1e0p pre-selection is summarized in table \ref{tab:1e0p:presel}. Again, similarly to \npsel workflow, we developed both a box cuts-based and a BDT-based selection for the 1e0p channel after this preselection.
 
-The 1e0p pre-selection is:
-\begin{itemize}
-    \item nslice = 1
-    \item slpdg = 12
-    \item n\_showers\_contained = 1
-    \item n\_tracks\_contained == 0 or (n\_tracks\_contained==1 and (tksh\_angle<-0.9 or trkpid > 0.1) and merge\_bestdist<2)
-    \item shr\_energy\_tot\_cali $>$ 0.07
-\end{itemize}
 
-Using this pre-selection, both box cuts and a BDT selection have been developed for the 1e0p channel.
+
+\begin{table}[h!]
+\centering
+\setlength{\tabcolsep}{10pt}
+\renewcommand{\arraystretch}{1.25}
+ \begin{tabular}{| c | c |} 
+ \hline
+ Cut goal & Cut definition \\
+ \hline\hline
+\multirow{2}{*}{Cosmic rejection} & nslice = 1 \\
+ & slpdg = 12 \\
+ \hline
+\multirow{3}{*}{Signal~topology} & n\_showers\_contained = 1 \\
+ & n\_tracks\_contained = 0 or \\ &n\_tracks\_contained =1 \& merge\_bestdist $<$2 cm\& (tksh\_angle$<$-0.9 or trkpid $>$ 0.1) \\
+ \hline
+Michel rejection & shr\_energy\_tot\_cali $>$ 0.07 GeV \\
+ \hline
+ \end{tabular}
+ \caption{\label{tab:1e0p:presel} Preselection requirements for the \zpsel selection.}
+\end{table}
+
+
+
 
 \subsubsection{Box cut selection}
 
-A box cut selection has been developed to select 1e0p events.  The selection cuts are designed to target the main backgrounds.  The strict fiducial volume from the CC inclusive analysis (cite cc inclusive paper) has been implemented to reduce the backgrounds associated with dirt and single showers from backgrounds entering the FV.   In addition to the CRT cuts there is also a cut on CosmicIP which directly targets removing cosmics.  In order to remove muon neutrino, and non-showering backgrounds there are also cuts on the shower profile and the number of subclusters in the shower.  A second shower search for hits in the Y plane is used to remove events where the second shower of a pi0 may have initially been missed.  dEdx is also used to remove pi0 backgrounds.  Two calculations are used, one which looks at the first 2 cm of the shower, and one which starts the calculation after 1 cm so that any hits from a low energy proton that may have been merged with the shower are not included in the calculation.
+A box cut selection has been developed to select 1e0p events.  The selection cuts are designed to target the main backgrounds.  The strict fiducial volume from the CC inclusive analysis \cite{bib:numuCCincl} has been implemented to reduce the backgrounds associated with dirt and single showers %from backgrounds 
+entering the FV.   Cosmic rejection includes the addition of cuts on CRT variables and on CosmicIP.  In order to remove muon neutrino and non-showering backgrounds, cuts on the shower profile and the number of subclusters in the shower are applied.  A second shower search for hits in the Y plane is used to remove events where the second shower of a pi0 may have initially been missed.  dEdx is also used to remove pi0 backgrounds.  Two calculations are used, one which looks at the first 2 cm of the shower, and one which starts the calculation after 1 cm so that any hits from a low energy proton that may have been merged with the shower are not included in the calculation.
 
-The 1e0p box cuts are:
+The \zpsel box cuts are summarized in table \ref{tab:1e0p:cutbased}
+
+\begin{table}[h!]
+\centering
+\setlength{\tabcolsep}{10pt}
+\renewcommand{\arraystretch}{1.25}
+ \begin{tabular}{| c | c |} 
+ \hline
+ Cut goal & Cut definition \\
+ \hline\hline
+\multirow{3}{*}{Cosmic~rejection} & CosmicIP $>$ 20 \si{\cm} \\
+& crtveto!=1  \\ & \_closestNuCosmicDist $>$ 20 \si{\cm}\\
+ \hline
+\multirow{2}{*}{$\nu_\mu$~rejection} & shr\_score $<$ 0.10 \\ & shrmoliereavg $>$ 2 and shrmoliereavg $<$ 9\\ &trkfit $<$ 0.45 or subcluster $>$ 6\\
+ \hline
+\multirow{3}{*}{Strict Fiducial Volume} & 22 \si{\cm} $<$ reco\_nu\_vtx\_sce\_x$<$ 234.35 \si{\cm} \\
+& -75.1 \si{\cm} $<$ reco\_nu\_vtx\_sce\_y$<$ 75.1 \si{\cm} \\ & 35 \si{\cm} $<$ reco\_nu\_vtx\_sce\_z$<$ 665 \si{\cm}  or 785 \si{\cm} $<$ reco\_nu\_vtx\_sce\_z $<$ 941.8 \si{\cm})\\
+ \hline
+ \multirow{3}{*}{$\pi^0$ \& proton~rejection} & secondshower\_Y\_nhit$<$25 \\ & shr\_tkfit\_2cm\_dedx\_Y $<$ 4 and shr\_tkfit\_2cm\_dedx\_Y $>$ 0.5 \\ & shr\_tkfit\_gap10\_dedx\_Y$>$1 and shr\_tkfit\_gap10\_dedx\_Y$<$ 3.5\\
+ \hline
+ \end{tabular}
+ \caption{\label{tab:1e0p:cutbased} Cut requirements for the \zpsel box cut selection.}
+\end{table}
+
 
 \begin{itemize}
-    \item nslice = 1
-    \item slpdg = 12
-    \item n\_showers\_contained == 1
-    \item n\_tracks\_contained == 0 or (n\_tracks\_contained==1 and (tksh\_angle$<$-0.9 or trkpid $>$ 0.1) and merge\_bestdist$<$2)
-    \item shr\_energy\_tot\_cali $>$ 0.1
-    \item (crtveto!=1) and (\_closestNuCosmicDist $>$ 20.)
-    \item (reco\_nu\_vtx\_sce\_x$>$22 and reco\_nu\_vtx\_sce\_x $<$234.35)
-    \item (reco\_nu\_vtx\_sce\_y $>$ -75.1 and reco\_nu\_vtx\_sce\_y$<$75.1)
-    \item ((reco\_nu\_vtx\_sce\_z$>$35 and reco\_nu\_vtx\_sce\_z$<$665) or (reco\_nu\_vtx\_sce\_z$>$785 and reco\_nu\_vtx\_sce\_z$<$941.8))
-    \item shrmoliereavg $>$ 2 and shrmoliereavg $<$ 9
-    \item shr\_score $<$ 0.1
-    \item CosmicIP $>$ 20.
-    \item (trkfit $<$ 0.45 or subcluster $>$ 6)
-    \item secondshower\_Y\_nhit$<$25
-    \item (shr\_tkfit\_2cm\_dedx\_Y $<$ 4 and shr\_tkfit\_2cm\_dedx\_Y $>$ 0.5)
-    \item (shr\_tkfit\_gap10\_dedx\_Y$>$1 and shr\_tkfit\_gap10\_dedx\_Y$<$ 3.5)
+    \item shr\_energy\_tot\_cali $>$ 0.1 \textcolor{blue}{Do you cut twice on this? One in the pre-selection and one here?}
 \end{itemize}
 
 \begin{figure}[H]
@@ -453,35 +481,43 @@ The 1e0p box cuts are:
 \end{center}
 \end{figure}
 
-The reconstructed energy distribution after this selection is shown in Fig.~\ref{fig:1e0p:cutbased:RUN3}.  Note that this plot uses the new Genie model, but the cuts have not yet been optimized for the new MC.  This selection predicts 9.8 true 1e0p events in the full data set and is 27\% pure in Run 3 for electron neutrinos and the LEE.  This selection will be tuned and the work expanded to include Run 1.
+The reconstructed energy distribution after this selection is shown in Fig.~\ref{fig:1e0p:cutbased:RUN3}.  \emph{Note that this plot uses the new Genie model, but the cuts have not yet been optimized for the new MC -- an improvement currently in the works.  This selection predicts 9.8 true 1e0p events in the full data set and is 27\% pure in Run 3 for electron neutrinos and the LEE.  This selection will be tuned and the work expanded to include Run 1.}
 
 \subsubsection{BDT}
 
-A selection has also been developed by training a BDT for the 1e0p events, using a similar method to the one employed by the 1eNp analysis.  At this stage the BDT has only been trained for Run 3 events, and includes a cut on the CRT before training to remove cosmics.  This work will be expanded to include Run 1.
+A selection has also been developed by training a BDT for the 1e0p events, using a similar method to the one employed by the 1eNp analysis.  At this stage the BDT has only been trained for Run 3 events, and includes a cut on the CRT variables before training to remove cosmics.  \emph{This work will be expanded to include Run 1.}
 
-The BDT is trained on a loose selection of 1e0p events, which includes the pre-cuts as well as several additional requirements that comprise a "loose selection" to focus on identifying electron neutrinos.
+The BDT is trained on a loose selection of 1e0p events, which includes the pre-selection cuts as well as several additional requirements that comprise a ``loose selection" to focus on identifying electron neutrinos, summarized in \ref{tab:1e0p:loosecut}.
 
-The loose selection for the 1e0p selection is:
-\begin{itemize}
-    \item nslice = 1
-    \item slpdg = 12
-    \item n\_showers\_contained = 1
-    \item n\_tracks\_contained == 0 or (n\_tracks\_contained==1 and (tksh\_angle<-0.9 or trkpid > 0.1) and merge\_bestdist<2)
-    \item shr\_energy\_tot\_cali $>$ 0.07
-    \item Shr\_tkfit\_2cm\_dedx\_Y$<$4
-    \item Shr\_score$<$0.3
-    \item cosmicIP$>$20
-    \item (crtveto!=1) and (\_closestNuCosmicDist $>$ 20.)
-    \item (reco\_nu\_vtx\_sce\_x$>$22 and reco\_nu\_vtx\_sce\_x $<$234.35)
-    \item (reco\_nu\_vtx\_sce\_y $>$ -75.1 and reco\_nu\_vtx\_sce\_y$<$75.1)
-    \item ((reco\_nu\_vtx\_sce\_z$>$35 and reco\_nu\_vtx\_sce\_z$<$665) or (reco\_nu\_vtx\_sce\_z$>$785 and reco\_nu\_vtx\_sce\_z$<$941.8))
-\end{itemize}
 
-Note that even this initial selection is somewhat strict, and comes with a drop in overall electron neutrino efficiency.  This is an initial study of the BDT performance, and it may be possible to loosen these cuts and regain efficiency without compromising the BDT selection performance. 
+\begin{table}[h!]
+\centering
+\setlength{\tabcolsep}{10pt}
+\renewcommand{\arraystretch}{1.25}
+ \begin{tabular}{| c | c |} 
+ \hline
+ Cut goal & Cut definition \\
+ \hline\hline
+\multirow{3}{*}{Cosmic~rejection} & CosmicIP $>$ 20 \si{\cm} \\
+& crtveto!=1  \\ & \_closestNuCosmicDist $>$ 20 \si{\cm}\\
+ \hline
+\multirow{1}{*}{$\nu_\mu$~rejection} & shr\_score $<$ 0.30 \\
+ \hline
+\multirow{3}{*}{Strict Fiducial Volume} & 22 \si{\cm} $<$ reco\_nu\_vtx\_sce\_x$<$ 234.35 \si{\cm} \\
+& -75.1 \si{\cm} $<$ reco\_nu\_vtx\_sce\_y$<$ 75.1 \si{\cm} \\ & 35 \si{\cm} $<$ reco\_nu\_vtx\_sce\_z$<$ 665 \si{\cm}  or 785 \si{\cm} $<$ reco\_nu\_vtx\_sce\_z $<$ 941.8 \si{\cm})\\
+ \hline
+ \multirow{1}{*}{$\pi^0$ ~rejection} & shr\_tkfit\_2cm\_dedx\_Y $<$ 4 \\
+ \hline
+ \end{tabular}
+ \caption{\label{tab:1e0p:loosecut} Loose cut requirements for the \zpsel BDT selection.}
+\end{table}
 
-At this stage a single BDT has been trained for this selection, which tries to separate all backgrounds from electron neutrino signals.  Performance may be improved by using multiple BDTs which are trained for specific background topologies as is done in the 1eNp selection. 
 
-As input the BDT uses for the most part the same variables as the box cuts.  In all cases in the BDT, however, the full three plane information is used, while it was not always found to improve the performance when using box cuts.  More information from the second shower search is also included in the BDT, such as the distance from the vertex to the second shower, and the angle between the second shower and the initial shower. The full list of variables used to train the 0p BDT is: shrmoliererms, shrmoliereavg, shr\_score, CosmicIP, subcluster, secondshower\_(U,V,Y)\_nhit, secondshower\_(U,V,Y)\_vtxdist, secondshower\_(U,V,Y)\_dot, anglediff\_(U,V,Y), shr\_tkfit\_2cm\_dedx\_(U,V,Y), shr\_tkfit\_gap10\_dedx\_(U,V,Y), trkfit, and hits\_ratio.
+Note that even this initial selection is somewhat strict, resulting in a drop of overall electron neutrino efficiency.
+\emph{This is an initial study of the BDT performance: it may be possible to loosen these cuts and regain efficiency without compromising the BDT selection performance. At this stage, a single BDT which tries to separate all backgrounds from electron neutrino signals has been trained for this selection.  Performance may be improved by using multiple BDTs which are trained for specific background topologies as done in the 1eNp selection. }
+
+The BDT inputs are for the most part the same variables as the box cuts.  In all cases in the BDT, however, the full three planes information is used, while it was not always found to improve the performance when using box cuts.   More information from the second shower search is also included in the BDT, such as the distance from the vertex to the second shower, and the angle between the second shower and the initial shower. The full list of variables used to train the \zpsel BDT is: shrmoliererms, shrmoliereavg, shr\_score, CosmicIP, subcluster, secondshower\_(U,V,Y)\_nhit, secondshower\_(U,V,Y)\_vtxdist, secondshower\_(U,V,Y)\_dot, anglediff\_(U,V,Y), shr\_tkfit\_2cm\_dedx\_(U,V,Y), shr\_tkfit\_gap10\_dedx\_(U,V,Y), trkfit, and hits\_ratio. Plot ~\ref{fig:1e0p:bdtvars:RUN3} shows the relative importance of each of these variables in the BDT.  The variables for which information from all three planes is used in the BDT are combined into one variable labeled ``ALL" in this plot.  
+
 
 \begin{figure}[H]
 \begin{center}
@@ -490,7 +526,6 @@ As input the BDT uses for the most part the same variables as the box cuts.  In 
 \end{center}
 \end{figure}
 
-Plot ~\ref{fig:1e0p:bdtvars:RUN3} shows the relative importance of each of these variables in the BDT.  The variables for which information from all three planes is used in the BDT are combined into one variable labeled "ALL" in this plot.  
 
 \begin{figure}[H] 
 \begin{center}
@@ -504,11 +539,10 @@ Plot ~\ref{fig:1e0p:bdtvars:RUN3} shows the relative importance of each of these
     \includegraphics[width=1.00\textwidth]{1e0p/bkg_score_01162020_RUN3_presel.pdf}
     \caption{\label{fig:1e0p:bdt:bkgscore:presel} After pre-selection.}
     \end{subfigure}
-\caption{\label{fig:1e0p:bdt:bkgscore} BDT response for background BDT.}
+\caption{\label{fig:1e0p:bdt:bkgscore} BDT response for background BDT.\textcolor{blue}{I'm confused by this caption--Elena}}
 \end{center}
 \end{figure}
 
-The BDT response after a slice, and after the 1e0p pre-selection is shown in Fig.~\ref{fig:1e0p:bdt:bkgscore}.  These show good data-MC agreement on run 3 data.
 
 \begin{figure}[H] 
 \begin{center}
@@ -526,8 +560,12 @@ The BDT response after a slice, and after the 1e0p pre-selection is shown in Fig
 \end{center}
 \end{figure}
 
-The BDT response after the loose selection that is used for training, and to cut on for the selection is shown in Fig.~\ref{fig:1e0p:bdt:bkgscore:loose}.  Based on this plot events above 0.96 in BDT response are selected as signal.
+The good data-MC agreement on run 3 data of the BDT response after a slice and after the \zpsel pre-selection is shown in Fig.~\ref{fig:1e0p:bdt:bkgscore}.  
 
+The BDT response after the loose selection that is used for training, and to cut on for the selection is shown in Fig.~\ref{fig:1e0p:bdt:bkgscore:loose} \textcolor{blue}{I'm confused by this wording}.  Based on this plot events above 0.96 in BDT response are selected as signal.\\
+
+
+\textcolor{blue}{Elena's Note: aren't these the same cuts with the addition of the the bkg\_score? If so, I believe we can remove this.
 The full set of BDT selection cuts is:
 \begin{itemize}
     \item nslice = 1
@@ -544,6 +582,7 @@ The full set of BDT selection cuts is:
     \item ((reco\_nu\_vtx\_sce\_z$>$35 and reco\_nu\_vtx\_sce\_z$<$665) or (reco\_nu\_vtx\_sce\_z$>$785 and reco\_nu\_vtx\_sce\_z$<$941.8))
     \item bkg\_score $>$ 0.96
 \end{itemize}
+}
 
 \begin{figure}[H]
 \begin{center}
@@ -1046,6 +1085,7 @@ The multiple selections described in  ~\ref{sec:nueselection}-\ref{sec:numuselec
 
 The different selections described in Section~\ref{sec:nueselection}-\ref{sec:numuselection} provide constraints to different energy range of the 1eNp selection as well as the kinematics and topology. The inclusive $\nu_e$ selection can be used to constrain the high energy $\nu_e$. We explore the prospect of adding the inclusive $\nu_e$ selection to constrain the high energy $\nu_e$. Given the non-orthogonality of this selection to the 1eNp0$\pi$ selection, we still need to explore other variables that can provide orthogonality in order to exercise the constraint. The 1e0p0$\pi$ channel can provide constraint to the less understood proton reconstruction and kinematics. The CC and NC $\pi0$ samples can be utilized to constrain the uncertainties coming from shower. Finally, we can use the $\nu_\mu$ selection to constrain the flux and cross section at low energy $\nu_e$ and Section~\ref{subsec:constraintfromnumu} describes this in more details. \textcolor{blue}{In its current state, the analysis utilizes solely the  $\nu_{\mu}$ channel as a constraint for $\nu_e$ systematics. Constraints employing the \zpsel and $\pi^0$ channels will be implemented in future iterations of this work.}
 
+
 \subsubsection{Constraint from Muon Neutrino}
 \label{subsec:constraintfromnumu}
 Using the measured $\nu_{\mu}$ energy spectrum interactions to constrain $\nu_e$ systematics is a common approach in oscillation experiments. 
@@ -1095,6 +1135,10 @@ Figure~\ref{fig:numuconstraintresult} demonstrates the effects of the $\nu_\mu$ 
 \end{center}
 \end{figure}
 
+\subsubsection{Constraint from the \zpsel channel}
+\label{sec:1e0pconstraint}
+\emph{While the procedure to implement the constraints from the \zpsel channel is clear, its results will be shown after the \zpsel selection is optimized.}
+
 
 \subsection{Final Sensitivities \textcolor{green}{Nico} \textcolor{red}{Do we need the final numbers from SBNfit?}}
 
@@ -1110,6 +1154,8 @@ This has been performed using the Poisson LLR test statistic, and including syst
     \label{fig:sensitivity_function_pot}
     \end{center}
 \end{figure}
+
+
 
 \subsection{Sensitivity to an oscillation signal \textcolor{green}{Nico}}
 <
